<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">7WondersCounter</string>
    <string name="action_settings">Settings</string>

    <!-- Dialogs -->
    <!--Science Dialog -->
    <string name="science_dialog_name">Science Calculation</string>
    <string name="science_calculation">Points from science: %1$d</string>
    <string name="science_button_calculate">Calculate</string>
    <string name="science_button_close">Close</string>
    <string name="science_text_message">Enter the numbers of card</string>
    <!--End Science Dialog -->
    <!-- Info Dialog -->
    <string name="info_dialog_title">Info</string>
    <string name="info_dialog_message">Icons by: Piotr Semeniuk,\nUsed libraries: ninePathLibrary, listviewanimations, tour guide and butterknife</string>
    <!-- End Info dialog-->
    <!-- End Dialogs -->
    <!-- Settings -->
    <string name="settings_addPlayerText">Add new player</string>
    <string name="settings_newPlayerHint"> Player name</string>
    <string name="settings_addPlayerButton">Add</string>
    <string name="settings_startGameButton">Start Game</string>
    <string name="settings_playerListText">List of players:</string>
    <!-- Warning/Errors -->
    <string name="warning_not_yet_implemented">This option is not yet implemented</string>
    <string name="warning_name_added">Name was previously added</string>
    <string name="warning_player_name_not_empty">Provide player name</string>
    <string name="warning_add_players">Please add more players</string>
    <!-- Headers -->
    <string name="list_header_player_name">Player name</string>
    <string name="list_header_war_points">War</string>
    <string name="list_header_gold_points">Gold</string>
    <string name="list_header_wonder_points">Wonder</string>
    <string name="list_header_civil_points">Civil</string>
    <string name="list_header_trade_points">Commerce</string>
    <string name="list_header_guild_points">Guild</string>
    <string name="list_header_science_points">Science</string>
    <string name="list_header_black_points">Black</string>
    <string name="list_header_total_points">Total</string>
    <string name="list_header_leaders_points">Leaders</string>
    <string name="list_header_cities_points">Cities</string>
    <string name="list_header_loan_points">Loans</string>

    <!--Dashboard -->
    <string name="dashboard_player_name">Player</string>
    <string name="dashboard_player_points">Points</string>
    <string name="dashboard_player_most_points">Most Points: </string>
    <!--DashBoard menu -->
    <string name="menu_dashboard">Score List</string>
    <string name="menu_edit">Edit Player Score</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_restart">Restart</string>
    <!-- Tutorial -->
    <string name="tutorial_title">Tutorial</string>
    <string name="tutorial_info">Info about used libraries</string>
    <string name="tutorial_dashboard">Player Dashboard</string>
    <string name="tutorial_edit">Edit Player Points</string>
    <string name="tutorial_settings">Config Game Extension</string>
    <string name="tutorial_reset">Restart Game</string>
    <string name="tutorial_remove">Swipe to remove a player</string>
    <!--End tutorial -->
    <!-- Extension -->
    <string name="settings_extension_question">Choose extension on:</string>
    <string name="settings_extension_off">No extension</string>
    <string name="settings_extension_leaders">Leaders</string>
    <string name="settings_extension_cities">Cities</string>
    <string name="settings_game_extensions">Use game extensions</string>
    <!-- End Extension -->
</resources>