<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/settings_game_mode_question"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_extension_question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/settings_game_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_game_mode_question"
        android:layout_centerInParent="true"
        android:padding="@dimen/textView_padding_normal">

        <RadioButton
            android:id="@+id/settings_game_mode_normal"
            style="@style/textView.item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_extension_off" />

        <RadioButton
            android:id="@+id/settings_game_mode_leaders"
            style="@style/textView.item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_extension_leaders" />

        <RadioButton
            android:id="@+id/settings_game_mode_cities"
            style="@style/textView.item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_extension_cities" />
    </RadioGroup>
</RelativeLayout>